# ibus-pinyin

./: .gitignore  AUTHORS  Makefile.am  README  README.chromium  autogen.sh  configure.ac  ibus-pinyin.spec.in  ibus-tmpl.spec.in
data/: .gitignore  Makefile.am  create_index.sql  wordlist
data/db/: Makefile.am  create_index.sql
data/db/android/: Makefile.am  create_db.py  pydict.py  rawdict_utf16_65105_freq.sql
data/db/chewing/: chewing.py
data/db/english/: Makefile.am  english.awk  wordlist
data/db/google/: Makefile.am  README  create_db_from_google.py  create_valid_hanzi.py  id.py
data/db/open-phrase/: Makefile.am
data/google/: create_db_from_google.py  createdb.py  id.py  pydict.py  rawdict_utf16_65105_freq.txt
data/icons/: Makefile.am
data/scripts/: Makefile  create_unique_index.py  double.py  id.py  pydict.py  pyutil.py
debian/: README.Debian  changelog  changelog.in  control  copyright  cron.d.ex  emacsen-install.ex  emacsen-remove.ex  emacsen-startup.ex  ibus-pinyin-default.ex  ibus-pinyin.doc-base.EX  ibus-pinyin.lintian-overrides  init.d.ex  init.d.lsb.ex  manpage.1.ex  manpage.sgml.ex  manpage.xml.ex  menu.ex  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch  watch.ex
engine/: Makefile.am  enchant.engine.in  engine.py  factory.py  ibus-engine-enchant.in  ibus-engine-pinyin.in  main.py  pinyin.engine.in  pinyin.py  pinyin.xml.in  pinyin.xml.in.in  pycreatedb.py  pydict.py  pyparser.py  pysqlitedb.py  pyutil.py  special_phrase  special_table  specialphrase.py  specialtable.py
icons/: Makefile.am
lua/: Makefile.am  base.lua  lmyoslib.c  lua-ext-console.c  lua-plugin-init.c  lua-plugin.c  lua-plugin.h  test-lua-plugin.c  test.lua
m4/: Makefile.am  boost.m4
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  ibus-pinyin.pot  ja.po  ru.po  zh_CN.gmo  zh_CN.po  zh_HK.po  zh_TW.po
scripts/: addheader.py  bopomofo.py  create_db.py  create_index.py  double.py  genbopomofokeyboard.py  genpuncttable.py  genpytable.py  header  id.py  punct.py  pydict.py  update-simptrad-table.py  valid_hanzi.py
setup/: .gitignore  Makefile.am  __init__.py  ibus-pinyin-preferences.glade  ibus-pinyin-preferences.ui  ibus-setup-pinyin.in  main.py  pydict.py  setup.glade  version.py.in
src/: .gitignore  Array.h  Bopomofo.h  BopomofoEditor.cc  BopomofoEditor.h  BopomofoEngine.cc  BopomofoEngine.h  BopomofoKeyboard.h  Bus.h  Config.cc  Config.h  CustomPhrase.cc  CustomPhrase.h  Database.cc  Database.h  DoublePinyinEditor.cc  DoublePinyinEditor.h  DoublePinyinTable.h  DynamicSpecialPhrase.cc  DynamicSpecialPhrase.h  Editor.cc  Editor.h  Engine.cc  Engine.h  ExtEditor.cc  ExtEditor.h  FallbackEditor.cc  FallbackEditor.h  FullPinyinEditor.cc  FullPinyinEditor.h  HalfFullConverter.cc  HalfFullConverter.h  HashTable.h  LookupTable.h  Main.cc  Makefile.am  Object.h  PYBopomofo.h  PYBopomofoEditor.cc  PYBopomofoEditor.h  (+112 more)
src/scripts/: genpytable.py  gensimptradtable.py  map.py
